--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,93 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+.like-icon {
+  transform-origin: center;
+}
+
+.heart__contour {
+  fill: var(--contour-color);
+  transition: fill 0.1s linear;
+}
+
+.heart__core {
+  fill: transparent;
+  transition: fill 0.3s linear 0.03s;
+}
+
+.heart__main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+
+.heart__sparks {
+  opacity: 0;
+}
+
+.like-icon:hover .heart__core {
+  fill: var(--contour-color);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .heart__main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .heart__core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:active .heart__main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .heart__core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .heart__main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .heart__contour {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.06s;
+}
+
+.like-icon.is-liked .heart {
+  animation: heart-scale 0.3s ease-in 0.1s;
+  transform-origin: center;
+}
+
+.like-icon.is-liked .heart__sparks {
+  animation: sparks-appearance 0.3s ease-in 0.3s;
+}
+
+@keyframes heart-scale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.25);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes sparks-appearance {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
