--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,396 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 .page {
+  margin: 0;
+  min-height: 100vh;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--main-font), sans-serif;
+  font-variation-settings: "wght" var(--text-weight);
+  background-image: var(--background-gradient);
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.container {
+  width: var(--container-width);
+  margin: 0 auto;
+  /*padding: 0 var(--padding);*/
+}
+
+.header {
+  /*padding: 20px 0;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: 2px solid var(--accent-color);
+  background-color: #fff;
+  margin-top: 100px;
+  margin-bottom: 95px;
+  /*height: clamp(327px, 50vh, 368px);*/
+  padding-top: clamp(7.625rem, 7.0481rem + 2.4615vw, 8.125rem);
+  padding-block-end: clamp(7.625rem, 7.0481rem + 2.4615vw, 8.125rem);
+  font-family: var(--accent-font);
+}
+
+.header__title {
+  font-size: var(--title-size);
+  line-height: 1;
+  /*margin: 0 0 20px;*/
+  text-transform: uppercase;
+  /*font-variation-settings: 'wght' var(--title-weight);*/
+}
+
+.header__subtitle {
+  font-size: clamp(0.875rem, 0.226rem + 2.7692vw, 1.4375rem);
+  margin: 0;
+  text-transform: uppercase;
+  padding-top: 20px;
+}
+
+.cards {
+  border: 2px solid var(--accent-color);
+  background-color: #fff;
+  margin-bottom: 50px;
+  position: relative;
+}
+
+.card__image-container {
+  position: relative;
+  border-block-end: 2px solid var(--accent-color);
+}
+
+.card__image {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
+  /*border-block-end: 2px solid var(--accent-color);*/
+}
+
+.card__title {
+  font-family: var(--main-font);
+  font-size: 18px;
+  margin: 0;
+  padding: 4px 10px;
+  border-bottom: 2px solid var(--accent-color);
+  font-variation-settings: "wght" var(--title-weight);
+}
+
+.card__content {
+  padding: 25px 25px 0px 25px;
+  font-size: 18px;
+  line-height: 1.17;
+}
+
+.card__content p {
+  margin: 0 0 25px 0;
+}
+
+.card__footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: top;
+  padding-inline-end: 25px;
+  padding-block-end: 25px;
+  gap: 10px;
+}
+
+.card__like-button {
+  position: relative;
+  background: transparent;
+  border: 2px solid var(--accent-color);
+  padding: 11px 20px 11px 20px;
+  cursor: pointer;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  color: var(--button-text-color);
+  overflow: hidden;
+  transition: box-shadow 0.3s ease;
+  min-width: 130px;
+  line-height: 90%;
+}
+
+.card__icon-button {
+  background: transparent;
+  border: 2px solid transparent;
+  padding: 0;
+  cursor: pointer;
+  width: 33px;
+  height: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: border-color 0.3s ease;
+}
+
+.save-button {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  margin: auto;
+  /*width: 355px;*/
+  background: var(-button-text-color);
+  border: 2px solid var(--accent-color);
+  padding: 15px 20px;
+  cursor: pointer;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  color: var(--button-text-color);
+  line-height: 90%;
+  overflow: hidden;
+  margin-bottom: 100px;
+  transition: box-shadow 0.3s ease;
+}
+
+.save-button__icon {
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+  width: 21px;
+  height: 21px;
+}
+
+.dialog {
+  padding: 30px;
+}
+
+.dialog::backdrop {
+  background-color: var(--dialog-backdrop-color);
+}
+
+.dialog__content {
+  display: flex;
+  /*flex-direction: column;*/
+  align-items: center;
+  /*text-align: center;*/
+  gap: 20px;
+}
+
+.dialog__text {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 1.5;
+  text-transform: uppercase;
+  margin: 0;
+  color: var(--text-color);
+}
+
+.dialog__icon {
+  width: 39px;
+  height: 39px;
+  color: var(--accent-color);
+  mix-blend-mode: normal;
+  stroke-width: 1px;
+}
+
+.dialog__button {
+  position: relative;
+  width: 100%;
+  background: transparent;
+  border: 2px solid var(--accent-color);
+  padding: 12px 135px;
+  margin-top: 30px;
+  cursor: pointer;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  color: var(--button-text-color);
+  overflow: hidden;
+  transition: box-shadow 0.3s ease;
+}
+
+.card__image-container {
+  position: relative;
+}
+
+.card__label {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  z-index: 1;
+  opacity: 0.5;
+  color: var(--text-color);
+  font-family: var(--accent-font);
+  font-size: 14px;
+  text-shadow:
+    -1px 0 var(--label-stroke-color),
+    0 1px var(--label-stroke-color),
+    1px 0 var(--label-stroke-color),
+    0 -1px var(--label-stroke-color);
+  /*background-color: #fff;*/
+  /*padding: 4px 12px;*/
+  /*border: 2px solid var(--accent-color);*/
+  mix-blend-mode: hard-light;
+  text-transform: uppercase;
+  vertical-align: middle;
+}
+
+@supports (text-stroke: 1px var(--label-stroke-color)) or
+  (-webkit-text-stroke: 1px var(--label-stroke-color)) {
+  .card__label {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--label-stroke-color);
+    text-stroke: 1px var(--label-stroke-color);
+  }
+}
+
+.filter-brightness {
+  filter: brightness(120%);
+}
+
+.filter-contrast {
+  filter: contrast(150%);
+}
+
+.filter-saturate {
+  filter: saturate(20%);
+}
+
+.filter-sepia {
+  filter: sepia(60%);
+}
+
+.filter-hue-rotate {
+  filter: hue-rotate(90deg);
+}
+
+.filter-invert {
+  filter: invert(20%);
+}
+
+.filter-blur {
+  filter: blur(3px);
+}
+
+.filter-multiple {
+  filter: brightness(110%) contrast(120%) saturate(150%);
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: 2px var(--accent-color);
+}
+
+.card__like-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.card__like-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+  z-index: 0;
+}
+
+.card__like-button:hover::before {
+  transform: translateX(0);
+}
+
+.card__like-button .button__text {
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+}
+
+.save-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.save-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+  z-index: 0;
+}
+
+.save-button:hover::before {
+  transform: translateX(0);
+}
+
+.save-button .button__text {
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+}
+
+.dialog__button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.dialog__button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+  z-index: 0;
+}
+
+.dialog__button:hover::before {
+  transform: translateX(0);
+}
+
+.dialog__button .button__text {
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+}
+
+@media (width <= 375px) {
+  .card__title {
+    padding: 6px 12px;
+  }
+
+  .card__content {
+    padding: 25px;
+  }
+
+  .save-button {
+    flex-direction: column;
+    padding: 17px;
+  }
+
+  .dialog {
+    padding: 30px 40px;
+  }
+
+  .dialog__text {
+    width: 234px;
+  }
+  .dialog__button {
+    padding: 12px 117px;
+  }
 }
