--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-  --main-font: "Inter", sans-serif;
-  --accent-font: "Press Start 2P", fantasy;
+  --main-font: "Inter";
+  --accent-font: "Press Start 2P";
   --text-weight: 410;
   --title-weight: 715;
   --background-gradient:
